# d3d12sample

./: CMakeLists.txt  COPYING  README.md
inc/: D3D12Sample.h  ImageIO.h  Test.h  Utility.h  Window.h
src/: D3D12Sample.cpp  ImageIO.cpp  Utility.cpp  Window.cpp  shaders.hlsl
